unpackaged/objects/EmployeeDevice__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_assigned__c</fullName>
        <label>Device assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Device__c.Is_used__c</field>
                <operation>equals</operation>
                <value>0</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Employee&apos;s Devices</relationshipLabel>
        <relationshipName>Employee_s_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>Devices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In use ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Employee&apos;s Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ED-{00000000}</displayFormat>
        <label>Employee&apos;s Device ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee&apos;s Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DateConsistency</fullName>
        <active>true</active>
        <description>End date should be superior to the start date.</description>
        <errorConditionFormula>AND( End_Date__c  &lt;   StartDate__c ,(NOT( $User.BypassVR__c )))</errorConditionFormula>
        <errorMessage>Verify End Date and Start date. End date should be superior to the start date.</errorMessage>
    </validationRules>
</CustomObject>